--- a/frontend/src/components/Layout/index.module.css
+++ b/frontend/src/components/Layout/index.module.css
@@ -24,8 +24,16 @@
 .sectionContent {
   padding: 32px;
 }
+
 .content {
   background-color: #fff;
   border-radius: 16px;
   padding: 24px;
+}
+
+.footer {
+  text-align: 'center';
+  height: 20px;
+  margin: 8px 0;
+  padding: 1px;
 }
