--- a/frontend/src/pages/welcome/index.module.css
+++ b/frontend/src/pages/welcome/index.module.css
@@ -41,3 +41,16 @@
   .cardLink:hover {
     color: #D1E9F9;
   }
+
+  .cardColLabel {
+    width: 50%;
+    text-align: center;
+    font-size: 18px;
+  }
+
+  .cardColCount {
+    width: 50%;
+    text-align: center;
+    font-size: 20px;
+    font-style: italic;
+  }
