trend page improve

--- a/frontend/src/pages/login/index.module.css
+++ b/frontend/src/pages/login/index.module.css
@@ -10,7 +10,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background: url(../../../public/login2.webp) no-repeat;
+    background: url(../../../public/login.png) no-repeat;
     background-size: cover;
     background-position: center;
     font-family: 'Montserrat', sans-serif;
