modified:   backend/js.json 	modified:   backend/log/all.log 	new file:   backend/log/all.log.2024-04-29 	new file:   backend/log/all.log.2024-05-18 	modified:   backend/routers/__pycache__/analysis.cpython-311.pyc 	modified:   backend/spider/config.json 	modified:   backend/spider/weibo/users.csv 	modified:   frontend/public/lda_pass8.html 	modified:   frontend/src/components/WeiboForm/index.tsx 	new file:   frontend/src/pages/analysis/ha/index.tsx 	modified:   frontend/src/pages/analysis/trend/chart_e.tsx 	modified:   frontend/src/pages/analysis/trend/index.tsx 	modified:   frontend/src/pages/weibo/index.tsx 	modified:   frontend/src/pages/welcome/index.module.css 	modified:   frontend/src/pages/welcome/index.tsx 	modified:   model/1/data_topic.xlsx 	modified:   model/1/learn.ipynb 	new file:   model/1/perplexity.png 	new file:   model/1/perplexity_and_score.png 	new file:   model/1/score_vs_topics.png 	new file:   model/1/show.ipynb 	modified:   model/data/stopwords.txt

--- a/frontend/src/pages/welcome/index.module.css
+++ b/frontend/src/pages/welcome/index.module.css
@@ -28,9 +28,35 @@
     padding: 5px;
   }
 
+  .instructionItem {
+    font-size: medium;
+    flex: 1 0 auto;
+    /* width: 50%; */
+    margin-bottom: 0px;
+    padding: 3px;
+  }
+
+  .welcomeList {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center; /* 将项目居中对齐 */
+    justify-content: center; /* 将项目居中对齐 */
+  }
+  
+  .welcomeItem {
+    font-size: medium;
+    flex: 1 0 auto;
+    /* width: 50%; */
+    margin-bottom: 0px;
+    padding: 3px;
+    display: flex; /* 添加 flex 布局 */
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+  } 
+
   .innerCard {
     width: 90%;
-
   }
 
   .cardLink {
